--- a/src/app/pages/food/food.page.scss
+++ b/src/app/pages/food/food.page.scss
@@ -16,3 +16,30 @@
 .empty-fridge .text {
   font-size: 1.5rem;
 }
+
+.ingredient-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ingredient-image {
+  width: 80px; /* Ajustez la largeur de l'image selon vos besoins */
+  height: 80px; /* Ajustez la hauteur de l'image selon vos besoins */
+  object-fit: cover;
+}
+
+.ingredient-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px; /* Ajustez la marge inférieure selon vos besoins */
+}
+
+.add-button {
+  width: 100%;
+  margin-top: 10px; /* Ajustez la marge supérieure du bouton selon vos besoins */
+}
