--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>SmartCook | Detail</ion-title>
+    <ion-title>SmartCook | Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
