--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -11,7 +11,11 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Personnal information :</ion-list-header>
+    <div class="favorite-header">
+      <ion-list>
+        <ion-list-header class="favorite-header-title">Personnal infomations</ion-list-header>
+      </ion-list>
+    </div>
   </ion-list>
   <ion-item (click)="updateName()">
     <ion-label>
