--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,3 @@
-ion-list-header {
-  background-color: #ececec;
-}
-
 .icon-col {
   display: flex;
   justify-content: center;
@@ -21,5 +17,20 @@ ion-icon {
   font-size: 0.9rem;
   margin-bottom: 0;
 }
+
+.refresh-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 16px;
+}
+
+.refresh-button {
+  background-color: cornflowerblue;
+  color: white;
+  border-radius: 25px;
+  padding: 8px 16px;
+}
+
+
 
 
