--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -9,9 +9,12 @@
 
 <ion-content>
   <ion-list>
-    <ion-list-header>Your favorite recipes :</ion-list-header>
+    <div class="favorite-header">
+      <ion-list>
+        <ion-list-header class="favorite-header-title">Your favorite recipes</ion-list-header>
+      </ion-list>
+    </div>
   </ion-list>
-
   <ion-grid>
     <ion-row>
       <ion-col size="12" size-md="6" size-lg="4" *ngFor="let recipe of favoriteRecipes">
@@ -48,12 +51,16 @@
               <ion-row>
                 <ion-col size="6" class="icon-col">
                   <div class="icon-container">
-                    <ion-button color="success" [routerLink]="'/detail/' + recipe.id">View</ion-button>
+                    <ion-button class="add-button" color="success" [routerLink]="'/detail/' + recipe.id">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </ion-button>
                   </div>
                 </ion-col>
                 <ion-col size="6" class="icon-col">
                   <div class="icon-container">
-                    <ion-button color="danger" (click)="removeFromFavorites(recipe.id)">Delete</ion-button>
+                    <ion-button class="add-button" color="danger" (click)="removeFromFavorites(recipe.id)">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </ion-button>
                   </div>
                 </ion-col>
               </ion-row>
