--- a/src/app/pages/favorites/favorites.page.scss
+++ b/src/app/pages/favorites/favorites.page.scss
@@ -1,7 +1,3 @@
-ion-list-header {
-  background-color: #ececec;
-}
-
 .icon-col {
   display: flex;
   justify-content: center;
@@ -21,5 +17,11 @@ ion-icon {
   font-size: 0.9rem;
   margin-bottom: 0;
 }
+
+.add-button {
+  width: 100%;
+  margin-top: 2px;
+}
+
 
 
