--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,25 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+@font-face {
+  font-family: 'Restaurant';
+  src: url('~src/assets/fonts/Pacifico-Regular.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+
+.favorite-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.favorite-header-title {
+  font-family: "Restaurant", sans-serif;
+  font-size: 26px;
+  background-color: white;
+}
+
+
+
