--- a/src/app/pages/favorites/favorites.page.html
+++ b/src/app/pages/favorites/favorites.page.html
@@ -1,73 +1,57 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>SmartCook | Favorites</ion-title>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>SmartCook | Favorites</ion-title>
+        <ion-buttons slot="start">
+            <ion-back-button defaultHref="/"></ion-back-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-list>
     <div class="favorite-header">
-      <ion-list>
-        <ion-list-header class="favorite-header-title">Your favorite recipes</ion-list-header>
-      </ion-list>
+        <ion-list>
+            <ion-list-header class="favorite-header-title">Your favorite recipes</ion-list-header>
+        </ion-list>
     </div>
-  </ion-list>
-  <ion-grid>
-    <ion-row>
-      <ion-col size="12" size-md="6" size-lg="4" *ngFor="let recipe of favoriteRecipes">
-        <ion-card>
-          <img [src]="recipe.image" alt="{{ recipe.title }} image" />
-          <ion-card-header>
-            <ion-card-title>{{ recipe.title }}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <p [innerHTML]="(recipe.summary | slice:0:700) + '...'">{{ recipe.summary | slice:0:150 }}...</p>
-            <ion-grid>
-              <ion-row>
-                <ion-col size="4" class="icon-col">
-                  <div class="icon-container">
-                    <ion-icon name="heart-sharp" color="danger"></ion-icon>
-                    <p class="icon-label">{{ recipe.aggregateLikes }}</p>
-                  </div>
+    <ion-list *ngIf="favoriteRecipes.length > 0; else emptyFavorites">
+        <ion-grid>
+            <ion-row>
+                <ion-col size="12" size-md="6" size-lg="4" *ngFor="let recipe of favoriteRecipes">
+                    <ion-card>
+                        <img [src]="recipe.image" alt="{{ recipe.title }} image"/>
+                        <ion-card-header>
+                            <ion-card-title>{{ recipe.title }}</ion-card-title>
+                        </ion-card-header>
+                        <ion-card-content>
+                            <p [innerHTML]="(recipe.summary | slice:0:700) + '...'">{{ recipe.summary | slice:0:150 }}
+                                ...</p>
+                            <ion-grid>
+                                <ion-row>
+                                    <ion-col size="6" class="icon-col">
+                                        <div class="icon-container">
+                                            <ion-button color="success" [routerLink]="'/detail/' + recipe.id">
+                                                <ion-icon name="eye"></ion-icon>
+                                            </ion-button>
+                                        </div>
+                                    </ion-col>
+                                    <ion-col size="6" class="icon-col">
+                                        <div class="icon-container">
+                                            <ion-button color="danger" (click)="removeFromFavorites(recipe.id)">
+                                                <ion-icon name="trash"></ion-icon>
+                                            </ion-button>
+                                        </div>
+                                    </ion-col>
+                                </ion-row>
+                            </ion-grid>
+                        </ion-card-content>
+                    </ion-card>
                 </ion-col>
-                <ion-col size="4" class="icon-col">
-                  <div class="icon-container">
-                    <ion-icon name="people-outline" color="primary"></ion-icon>
-                    <p class="icon-label">{{ recipe.servings }}</p>
-                  </div>
-                </ion-col>
-                <ion-col size="4" class="icon-col">
-                  <div class="icon-container">
-                    <ion-icon name="time-sharp" color="medium"></ion-icon>
-                    <p class="icon-label">{{ recipe.readyInMinutes }}</p>
-                  </div>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-            <ion-grid>
-              <ion-row>
-                <ion-col size="6" class="icon-col">
-                  <div class="icon-container">
-                    <ion-button class="add-button" color="success" [routerLink]="'/detail/' + recipe.id">
-                      <ion-icon name="eye-outline"></ion-icon>
-                    </ion-button>
-                  </div>
-                </ion-col>
-                <ion-col size="6" class="icon-col">
-                  <div class="icon-container">
-                    <ion-button class="add-button" color="danger" (click)="removeFromFavorites(recipe.id)">
-                      <ion-icon name="trash-outline"></ion-icon>
-                    </ion-button>
-                  </div>
-                </ion-col>
-              </ion-row>
-            </ion-grid>
-          </ion-card-content>
-        </ion-card>
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+            </ion-row>
+        </ion-grid>
+    </ion-list>
+    <ng-template #emptyFavorites>
+        <div class="empty-favorites">
+            <p class="text">Your favorite page is empty</p>
+        </div>
+    </ng-template>
 </ion-content>
