--- a/src/app/pages/favorites/favorites.page.scss
+++ b/src/app/pages/favorites/favorites.page.scss
@@ -23,5 +23,17 @@ ion-icon {
   margin-top: 2px;
 }
 
+.empty-favorites {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  text-align: center;
+}
+
+.empty-favorites .text {
+  font-size: 1.5rem;
+}
 
 
