--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-title>
-      SmartCook | Shopping List
+      SmartCook
     </ion-title>
   </ion-toolbar>
 </ion-header>
