--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SmartCook | Login</ion-title>
+    <ion-title>SmartCook</ion-title>
   </ion-toolbar>
 </ion-header>
 
