--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SmartCook | Profile</ion-title>
+    <ion-title>SmartCook</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="logOut()">
         <ion-icon color="danger" slot="icon-only" name="log-out-outline"></ion-icon>
@@ -13,7 +13,7 @@
   <ion-list>
     <div class="favorite-header">
       <ion-list>
-        <ion-list-header class="favorite-header-title">Personnal infomations</ion-list-header>
+        <ion-list-header class="favorite-header-title">Personnal informations</ion-list-header>
       </ion-list>
     </div>
   </ion-list>
