--- a/src/app/pages/detail/detail.page.html
+++ b/src/app/pages/detail/detail.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>SmartCook | Details</ion-title>
+    <ion-title>SmartCook</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -43,7 +43,7 @@
         </ion-col>
         <ion-col size="6" class="icon-col">
           <div class="icon-container">
-            <ion-button [routerLink]="'/favorites'" color="success">
+            <ion-button [routerLink]="'/favorites'" color="primary">
               See Favorites
             </ion-button>
           </div>
@@ -79,7 +79,9 @@
               <ion-row>
                 <ion-col class="icon-col">
                   <div class="icon-container">
-                    <ion-button [routerLink]="'/detail/' + recipe.id">View recipe</ion-button>
+                    <ion-button color="success" [routerLink]="'/detail/' + recipe.id">
+                      <ion-icon name="eye"></ion-icon>
+                    </ion-button>
                   </div>
                 </ion-col>
               </ion-row>
