--- a/src/app/pages/food/food.page.html
+++ b/src/app/pages/food/food.page.html
@@ -1,12 +1,12 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>SmartCook | My Fridge</ion-title>
+        <ion-title>SmartCook</ion-title>
     </ion-toolbar>
 </ion-header>
 
 <ion-content>
     <!-- Search results -->
-    <ion-searchbar [placeholder]="'Search for ingredients ...'" [(ngModel)]="searchQuery"
+    <ion-searchbar [placeholder]="'Search for ingredients...'" [(ngModel)]="searchQuery"
                    (ionChange)="selectIngredients()"></ion-searchbar>
     <ion-grid *ngIf="searchResults && searchResults.length > 0">
         <ion-row>
@@ -29,6 +29,12 @@
         </ion-row>
     </ion-grid>
     <!-- Ingredients in the fridge -->
+
+    <div class="favorite-header">
+        <ion-list>
+            <ion-list-header class="favorite-header-title">My fridge ingredients</ion-list-header>
+        </ion-list>
+    </div>
     <ion-grid *ngIf="ingredients && ingredients.length > 0; else emptyFridge">
         <ion-row>
             <ion-col size="6" *ngFor="let ingredient of ingredients">
