--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -1,9 +1,100 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SmartCook | Search</ion-title>
+    <ion-title>SmartCook</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-searchbar [placeholder]="'Rechercher des recettes...'"
+                 [(ngModel)]="searchQuery"
+                 (ionChange)="searchRecipes()"></ion-searchbar>
 
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-item>
+          <ion-label>Diet</ion-label>
+          <ion-select [(ngModel)]="selectedDiet" (ionChange)="searchRecipes()">
+            <ion-select-option *ngFor="let diet of diets" [value]="diet">{{ diet }}</ion-select-option>
+          </ion-select>
+          <ion-button slot="end" fill="clear" size="small" (click)="clearFilter('diet')">Clear</ion-button>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label>Cuisine</ion-label>
+          <ion-select [(ngModel)]="selectedCuisine" (ionChange)="searchRecipes()">
+            <ion-select-option *ngFor="let cuisine of cuisines" [value]="cuisine">{{ cuisine }}</ion-select-option>
+          </ion-select>
+          <ion-button slot="end" fill="clear" size="small" (click)="clearFilter('cuisine')">Clear</ion-button>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label>Type</ion-label>
+          <ion-select [(ngModel)]="selectedType" (ionChange)="searchRecipes()">
+            <ion-select-option *ngFor="let type of types" [value]="type">{{ type }}</ion-select-option>
+          </ion-select>
+          <ion-button slot="end" fill="clear" size="small" (click)="clearFilter('type')">Clear</ion-button>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label>Intolerances</ion-label>
+          <ion-select [(ngModel)]="selectedIntolerances" (ionChange)="searchRecipes()" multiple="true">
+            <ion-select-option *ngFor="let intolerance of intolerances" [value]="intolerance">{{ intolerance }}</ion-select-option>
+          </ion-select>
+          <ion-button slot="end" fill="clear" size="small" (click)="clearFilter('intolerances')">Clear</ion-button>
+        </ion-item>
+      </ion-col>
+      <ion-col>
+        <ion-item>
+          <ion-label>Occasion</ion-label>
+          <ion-select [(ngModel)]="selectedOccasion" (ionChange)="searchRecipes()">
+            <ion-select-option *ngFor="let occasion of occasions" [value]="occasion">{{ occasion }}</ion-select-option>
+          </ion-select>
+          <ion-button slot="end" fill="clear" size="small" (click)="clearFilter('occasion')">Clear</ion-button>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ng-container *ngIf="recipes && searchQuery">
+    <div class="favorite-header">
+      <ion-list>
+        <ion-list-header class="favorite-header-title">Your results</ion-list-header>
+      </ion-list>
+    </div>
+  </ng-container>
+  <ion-slides #slides *ngIf="searchQuery">
+    <ion-slide *ngFor="let recipe of recipes">
+      <ion-card>
+        <img [src]="recipe.image" alt="No image found for this recipe" />
+        <ion-card-header>
+          <ion-card-title>{{ recipe.title }}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6" class="icon-col">
+                <div class="icon-container">
+                  <ion-button color="success" [routerLink]="'/detail/' + recipe.id">
+                    <ion-icon name="eye"></ion-icon>
+                  </ion-button>
+                </div>
+              </ion-col>
+              <ion-col size="6" class="icon-col">
+                <div class="icon-container">
+                  <ion-button color="warning" [disabled]="isFavorite(recipe)" (click)="toggleFavorite(recipe)">
+                    <ion-icon name="star"></ion-icon>
+                  </ion-button>
+                </div>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-content>
+      </ion-card>
+    </ion-slide>
+  </ion-slides>
 </ion-content>
+
