--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-searchbar [placeholder]="'Search recipes ..dqsqsddqs.'"
+    <ion-searchbar [placeholder]="'Search recipes ...'"
                    [(ngModel)]="searchQuery"
                    (ionChange)="searchQuery$.next(searchQuery)"></ion-searchbar>
     <ion-grid>
