--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SmartCook2</ion-title>
+    <ion-title>SmartCook</ion-title>
     <ion-buttons slot="end">
       <ion-button [routerLink]="'/favorites'">
         <ion-icon color="warning" name="star-half-outline"></ion-icon>
