--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>SmartCook2</ion-title>
+    <ion-title>SmartCook</ion-title>
     <ion-buttons slot="end">
       <ion-button [routerLink]="'/favorites'">
         <ion-icon color="warning" name="star-half-outline"></ion-icon>
@@ -12,6 +12,7 @@
   <div class="favorite-header">
     <ion-list>
       <ion-list-header class="favorite-header-title">My 10 recipes of the day</ion-list-header>
+      <ion-list class="ion-align-items-center" style="margin-top: 3px">Because life is food and food is life</ion-list>
     </ion-list>
   </div>
   <div class="refresh-button-container">
