--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -13,25 +13,31 @@
     </ion-list>
   </div>
 </ion-list>
-<ion-item>
-  <ion-input placeholder="Name" [(ngModel)]="newItemName"></ion-input>
-  <ion-input placeholder="Quantity" [(ngModel)]="newItemQuantity" type="number"></ion-input>
-  <ion-button (click)="addNewItem(newItemName, newItemQuantity)">
-    <ion-icon name="add-outline"></ion-icon>
-  </ion-button>
-</ion-item>
 
 <ion-content>
-  <ion-list>
-    <ion-item *ngFor="let item of shoppingList">
-      <ion-label [class.checked]="item.isChecked">
-        {{item.name}} ({{item.quantity}})
-      </ion-label>
-      <ion-buttons slot="end">
-        <ion-button (click)="deleteItem(item.id)">
-          <ion-icon name="close-outline" slot="icon-only"></ion-icon>
-        </ion-button>
-      </ion-buttons>
-    </ion-item>
-  </ion-list>
+  <ion-grid *ngIf="ingredients && ingredients.length > 0; else emptyList">
+    <ion-row>
+      <ion-col size="6" *ngFor="let ingredient of ingredients">
+        <ion-card class="ingredient-card">
+          <ion-card-header>
+            <ion-card-title><strong>{{ ingredient.name.toUpperCase() }}</strong></ion-card-title>
+          </ion-card-header>
+          <ion-card-content class="ingredient-content">
+            <ion-img class="ingredient-image"
+                     [src]="ingredient.image"
+                     alt="No picture found for this ingredient"></ion-img>
+          </ion-card-content>
+          <ion-button class="remove-button" expand="block" color="danger" (click)="deleteFromShoppingList(ingredient.id)">
+            <ion-icon name="trash"></ion-icon>
+          </ion-button>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
+
+<ng-template #emptyList>
+  <div class="empty-list" style="margin-bottom: 150px">
+    <p class="text">Your shopping list is empty</p>
+  </div>
+</ng-template>
