--- a/src/app/pages/food/food.page.html
+++ b/src/app/pages/food/food.page.html
@@ -60,7 +60,7 @@
                         <ion-row>
                             <ion-col size="6" class="icon-col">
                                 <div class="icon-container">
-                                    <ion-button class="add-button" color="secondary" (click)="saveToShoppingList(ingredient)">
+                                    <ion-button class="add-button" color="secondary" [disabled]="isInShoppingList(ingredient.id)" (click)="saveToShoppingList(ingredient)">
                                         <ion-icon name="cart"></ion-icon>
                                     </ion-button>
                                 </div>
