add chatBot page + new spoonacular service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,9 @@
       <ion-tab-button tab="list">
         <ion-icon name="receipt-outline"></ion-icon>
       </ion-tab-button>
+      <ion-tab-button tab="chat-bot">
+        <ion-icon name="chatbubbles-outline"></ion-icon>
+      </ion-tab-button>
       <ion-tab-button tab="profile">
         <ion-icon name="person-outline"></ion-icon>
       </ion-tab-button>
