--- a/src/app/pages/food/food.page.html
+++ b/src/app/pages/food/food.page.html
@@ -19,9 +19,9 @@
     </div>
     <!-- Search with fridge ingredients -->
     <div class="centered-button-container">
-        <ion-button class="search-button" color="primary" (click)="searchRecipesWithFridgeIngredients()">
-            <ion-icon name="fast-food"></ion-icon>
-            Search recipes with my ingredients
+        <ion-button class="search-button" color="primary" [disabled]="!anyIngredientSelected()" (click)="searchRecipesWithFridgeIngredients()">
+            <ion-icon name="search-outline"></ion-icon>
+            Search with my ingredients
         </ion-button>
     </div>
     <ion-searchbar [placeholder]="'Search for ingredients...'" [(ngModel)]="searchQuery"
@@ -54,7 +54,7 @@
     <ion-grid *ngIf="ingredients && ingredients.length > 0; else emptyFridge">
         <ion-row>
             <ion-col size="6" *ngFor="let ingredient of ingredients">
-                <ion-card class="ingredient-card">
+                <ion-card class="ingredient-card" [ngClass]="{'selected': ingredient.isSelected}" (click)="selectIngredient(ingredient)">
                     <ion-card-header>
                         <ion-card-title><strong>{{ ingredient.name.toUpperCase() }}</strong></ion-card-title>
                     </ion-card-header>
