--- a/src/app/pages/food/food.page.scss
+++ b/src/app/pages/food/food.page.scss
@@ -57,3 +57,10 @@
 .search-button ion-icon {
   margin-right: 10px;
 }
+
+.ingredient-card.selected {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
+}
+
