--- a/src/app/pages/search/search.page.html
+++ b/src/app/pages/search/search.page.html
@@ -1,13 +1,18 @@
 <ion-header>
     <ion-toolbar>
         <ion-title>SmartCook</ion-title>
+        <ion-buttons slot="end">
+            <ion-button color="tertiary" (click)="toggleContent()">
+                <ion-icon [name]="view === 'view1' ? 'fast-food-outline' : 'newspaper-outline'"></ion-icon>
+            </ion-button>
+        </ion-buttons>
     </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content *ngIf="view === 'view1'">
     <ion-searchbar [placeholder]="'Search recipes...'"
                    [(ngModel)]="searchQuery"
-                   (ionChange)="searchQuery$.next(searchQuery)"></ion-searchbar>
+                   (ionChange)="searchRecipes()"></ion-searchbar>
     <ion-grid>
         <ion-row>
             <ion-col>
@@ -72,6 +77,52 @@
     </div>
   </ng-container>
   <ion-slides *ngIf="searchQuery">
+        <ion-slide *ngFor="let recipe of recipes">
+            <ion-card>
+                <img [src]="recipe.image" alt="No image found for this recipe"/>
+                <ion-card-header>
+                    <ion-card-title>{{ recipe.title }}</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                    <ion-grid>
+                        <ion-row>
+                            <ion-col size="6" class="icon-col">
+                                <div class="icon-container">
+                                    <ion-button color="success" [routerLink]="'/detail/' + recipe.id">
+                                        <ion-icon name="eye"></ion-icon>
+                                    </ion-button>
+                                </div>
+                            </ion-col>
+                            <ion-col size="6" class="icon-col">
+                                <div class="icon-container">
+                                    <ion-button color="warning" [disabled]="isFavorite(recipe)"
+                                                (click)="toggleFavorite(recipe)">
+                                        <ion-icon name="star"></ion-icon>
+                                    </ion-button>
+                                </div>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+                </ion-card-content>
+            </ion-card>
+        </ion-slide>
+    </ion-slides>
+</ion-content>
+
+<ion-content *ngIf="view === 'view2'">
+    <ion-searchbar (ionChange)="searchIngredients$.next(searchIngredients)"
+                   [(ngModel)]="searchIngredients"
+                   [placeholder]="'Search by ingredients...'"></ion-searchbar>
+    <ng-container *ngIf="recipes && searchIngredients">
+        <div class="favorite-header">
+            <ion-list>
+                <ion-list-header class="favorite-header-title">
+                    {{ recipes.length > 0 ? 'Your results' : 'No recipes found' }}
+                </ion-list-header>
+            </ion-list>
+        </div>
+    </ng-container>
+    <ion-slides *ngIf="searchIngredients">
         <ion-slide *ngFor="let recipe of recipes">
             <ion-card>
                 <img [src]="recipe.image" alt="No image found for this recipe"/>
