--- a/src/app/pages/food/food.page.scss
+++ b/src/app/pages/food/food.page.scss
@@ -18,7 +18,7 @@
 }
 
 .ingredient-card {
-  height: 100%;
+  height: 89%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -26,9 +26,8 @@
 }
 
 .ingredient-image {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
+  width: 100px;
+  height: 100px;
 }
 
 .ingredient-content {
@@ -36,12 +35,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px;
 }
 
 .add-button {
+  margin-top: 10px;
   width: 100%;
-  margin-top: 2px;
 }
 
 .centered-button-container {
@@ -63,4 +61,3 @@
   border-radius: 8px;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.1);
 }
-
