--- a/src/app/pages/restaurants/restaurants.page.html
+++ b/src/app/pages/restaurants/restaurants.page.html
@@ -7,7 +7,7 @@
 <ion-list>
   <div class="favorite-header">
     <ion-list>
-      <ion-list-header class="favorite-header-title">Search a restaurant near you</ion-list-header>
+      <ion-list-header class="favorite-header-title">Find restaurants near you</ion-list-header>
     </ion-list>
   </div>
   <div class="centered-button-container">
