--- a/src/app/pages/list/list.page.scss
+++ b/src/app/pages/list/list.page.scss
@@ -44,9 +44,13 @@
 }
 
 .favorite-header-title {
-  margin-left: 50px;
+  margin-left: 1px;
 }
 
 .ion-align-items-center {
   margin-top: 3px;
+}
+
+.favorite-header ion-list {
+  text-align: center;
 }
