--- a/src/app/pages/restaurants/restaurants.page.scss
+++ b/src/app/pages/restaurants/restaurants.page.scss
@@ -13,3 +13,11 @@
   margin-top: 2px;
 }
 
+.text-large {
+  font-size: 20px;
+}
+
+.phone-row {
+  background-color: #0ec254;
+  border-radius: 10px;
+}
