--- a/src/app/pages/list/list.page.html
+++ b/src/app/pages/list/list.page.html
@@ -9,7 +9,7 @@
   <div class="favorite-header">
     <ion-list>
       <ion-list-header class="favorite-header-title" style="margin-left: 50px">Your shopping list</ion-list-header>
-      <ion-list class="ion-align-items-center" style="margin-top: 3px">Note what you need for your next shopping trip</ion-list>
+      <ion-list class="ion-align-items-center" style="margin-top: 3px">What you need for your next shopping trip</ion-list>
     </ion-list>
   </div>
 </ion-list>
